--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: [In Code we trust]
-description: [Write something that last]
+description: [Write something that could last.]
 logo: /assets/img/logo.png
